# passpobt

./: .env.example  .gitignore  README.md  setup.cfg
passpobt/: bot.py  mailbox.py  telegram.py
passpobt/tests/: __init__.py  test_bot.py  test_mailbox.py  test_telegram.py
