[metadata]
name = passpobt
version = 0.1.0
author = Anton Orlov
author_email = ion6431@gmail.com
description = Description of the passpobt project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/veotani/passpobt
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.10

[flake8]
max-line-length = 120

[pylint]
disable = missing-module-docstring, too-few-public-methods, invalid-name, unused-argument
max-line-length = 120

[mypy]
show_column_numbers = True
ignore_missing_imports = True

[isort]
line_length = 120
no_lines_before = LOCALFOLDER
lines_after_imports = 2
length_sort_straight = True

[options]
packages = find:
python_requires = >=3.10
install_requires =
    rich
    python-dotenv

    # Telegram
    aiogram

    # Google API dependencies
    google-api-python-client
    google-auth-httplib2
    google-auth-oauthlib

[options.extras_require]
dev =
    mypy
    isort
    flake8
    pylint

test =
    pytest
    pytest-asyncio
